--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,21 @@
     margin-top: 10%;
     width: 90%;
     height: 70%;
+    padding-top: 2%;
     border-bottom: 1px solid gray;
     border-top: 1px solid gray;
     display: grid;
     grid-template-columns: 1fr 5fr 1fr;
     grid-template-rows: 5fr 1fr;
+}
+
+button {
+    background: none;
+    border: none;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 .prev-btn {
@@ -39,7 +49,10 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    border: 1px solid gray;
 }
+
+
 
 .slide-container {
     grid-column: 2 / 3;
